frontend/test/should_fail/index_exec_node_fromIndexSame_return_value_mismatch.grg
#using "index_exec_model.gm"

sequence s(i:set<AEdge>)
{
	{ i=nodesFromIndexSame(fooi, 42) }
}
